--- a/src/components/bodySection/bodySection.component.css
+++ b/src/components/bodySection/bodySection.component.css
@@ -1,18 +1,23 @@
+
 .wrapper {
+  padding: 10px;
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 25px;
     justify-content: center;
+    background-color: #7BD3EA;
   }
   
   .card {
+    background-color: #A1EEBD;
+    box-shadow: 5px 10px 10px rgba(0, 0, 0, 0.2);
     padding: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: transparent;
-    width: 23rem;
-    border: none;
+    width: 24rem;
+    border-radius: 20px;
+    border: 1px solid black;
     transition: transform 0.2s;
   }
   
@@ -24,16 +29,14 @@
     object-fit: cover;
     margin-bottom: 30px;
     background: whitesmoke;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-    transition: transform 0.2s; 
   }
 
   .card:hover {
     cursor: pointer;
   }
   
-  .card:hover img {
-    transform: scale(1.2); 
+  .card:hover{
+    transform: scale(1.03); 
     
   }
   
@@ -46,5 +49,20 @@
   .card p {
     font-size: 15px;
     color: #666;
+  }
+
+  .btn-link {
+    background-color: #F6D6D6;
+    border-radius: 20px;
+    text-decoration: none;
+    color: #000;
+    font-weight: 600;
+  }
+
+  .btn-link:hover {
+    text-decoration: underline;
+    color: black;
+    background-color: #F6D6D6;
+    
   }
   
